# Tang_MEGA_138K_Pro_Dock

./: .gitignore  ReadMe.txt  readme.md
ae350_customized_demo/impl/: ae350_customized_demo_process_config.json
ae350_customized_demo/impl/temp/: rtl_parser.result  rtl_parser_arg.json
ae350_customized_demo/src/: ae350_customized_demo.cst  ae350_customized_demo.sdc  ae350_customized_demo.v
ae350_customized_demo/src/ddr3_memory/ddr3_memory_interface/: ddr3_memory_interface.v  ddr3_memory_interface.vo
ae350_customized_demo/src/ddr3_memory/ddr3_memory_interface/temp/DDR3/: DDR3.prj  ddr3_memory_interface_syn.rpt.html  ddr3_memory_interface_tmp.v
ae350_customized_demo/src/ddr3_memory/ddr3_memory_rdfifo/: ddr3_memory_rdfifo.vo
ae350_customized_demo/src/ddr3_memory/ddr3_memory_rdfifo/temp/FIFO/: FIFO.prj  ddr3_memory_rdfifo.vg  ddr3_memory_rdfifo_syn.rpt.html  ddr3_memory_rdfifo_tmp.v
ae350_customized_demo/src/ddr3_memory/ddr3_memory_wrfifo/: ddr3_memory_wrfifo.vo
ae350_customized_demo/src/ddr3_memory/ddr3_memory_wrfifo/temp/FIFO/: FIFO.prj  ddr3_memory_wrfifo.vg  ddr3_memory_wrfifo_syn.rpt.html  ddr3_memory_wrfifo_tmp.v
ae350_customized_demo/src/gowin_pll_ae350/: gowin_pll_ae350.mod  gowin_pll_ae350.v  gowin_pll_ae350_tmp.v
ae350_customized_demo/src/gowin_pll_ddr3/: gowin_pll_ddr3.mod  gowin_pll_ddr3.v  gowin_pll_ddr3_tmp.v
ae350_customized_demo/src/riscv_ae350_soc/: riscv_ae350_soc.v  riscv_ae350_soc.vo  riscv_ae350_soc_tmp.v
ae350_customized_demo/src/riscv_ae350_soc/temp/riscv_ae350_soc/: riscv_ae350_soc.prj  riscv_ae350_soc_syn.rpt.html
ae350_demo/: ae350_demo.gprj
ae350_demo/impl/: ae350_demo_process_config.json
ae350_demo/impl/temp/: rtl_parser.result  rtl_parser_arg.json
ae350_demo/src/: ae350_demo.cst  ae350_demo.sdc  ae350_demo.v
ae350_demo/src/gowin_pll_ae350/: gowin_pll_ae350.mod  gowin_pll_ae350.v  gowin_pll_ae350_tmp.v
ae350_demo/src/gowin_pll_ddr3/: gowin_pll_ddr3.mod  gowin_pll_ddr3.v  gowin_pll_ddr3_tmp.v
ae350_demo/src/riscv_ae350_soc/: riscv_ae350_soc.ipc  riscv_ae350_soc.v  riscv_ae350_soc_tmp.v
ae350_demo/src/riscv_ae350_soc/temp/riscv_ae350_soc/: riscv_ae350_config.v  riscv_ae350_soc.prj  riscv_ae350_soc_syn.rpt.html  riscv_ae350_soc_syn_resource.html  riscv_ae350_soc_syn_rsc.xml
software/ae350_coremark/: CMakeLists.txt  build.sh  readme.md
software/ae350_coremark/src/bsp/config/: config.h
software/ae350_coremark/src/bsp/driver/ae350/: i2c_ae350.h  pit_ae350.c  uart_ae350.h
software/ae350_coremark/src/bsp/lib/: delay.c  delay.h
software/ae350_coremark/src/bsp/sag/: ae350-ilm.ld
software/ae350_coremark/src/demo/: core_list_join.c  core_main.c  core_matrix.c  core_portme.c  core_portme.h  core_state.c  core_util.c  coremark.h  define.h
software/ae350_coremark/src/demo/stubs/: close.c  write.c  write_hex.c
software/ae350_dhrystone/: CMakeLists.txt  readme.md
software/ae350_dhrystone/src/bsp/driver/ae350/: dma_ae350.h  i2c_ae350.c  uart_ae350.c
software/ae350_dhrystone/src/bsp/driver/include/: Driver_PIT.h  Driver_SMU.h
software/ae350_dhrystone/src/bsp/lib/: delay.c  delay.h  uart.h
software/ae350_dhrystone/src/bsp/sag/: ae350-ddr.ld  ae350-ddr.sag  ae350-ilm.sag  ae350-xip.ld  ae350-xip.sag
software/ae350_dhrystone/src/demo/: define.h  dhry.h  dhry_1.c  dhry_2.c
software/ae350_dhrystone/src/demo/stubs/: fstat.c  isatty.c  lseek.c  read.c  stub.h
software/ae350_test/: CMakeLists.txt
software/ae350_test/src/demo/: demo.h
software/ae350_test/src/demo/cache/: demo_cache.c
software/ae350_test/src/demo/cache_lock/: demo_cache_lock.c
software/ae350_test/src/demo/gpio/: demo_gpio.c
software/ae350_test/src/demo/hsp/: demo_hsp.c
software/ae350_test/src/demo/i2c/: demo_i2c.c
software/ae350_test/src/demo/idlm/: demo_idlm.c
software/ae350_test/src/demo/intr/: demo_intr.c
software/ae350_test/src/demo/led/: demo_led.c
software/ae350_test/src/demo/mm/: demo_mm.c
software/ae350_test/src/demo/pfm/: demo_pfm.c
software/ae350_test/src/demo/plic/: demo_plic.c
software/ae350_test/src/demo/plmt/: demo_plmt.c
software/ae350_test/src/demo/powerbrake/: demo_powerbrake.c
software/ae350_test/src/demo/printf/: demo_printf.c
software/ae350_test/src/demo/pwm/: demo_pwm.c
software/ae350_test/src/demo/rtc/: demo_rtc.c
software/ae350_test/src/demo/scanf/: demo_scanf.c
software/ae350_test/src/demo/spi/: demo_spi.c
software/ae350_test/src/demo/uart/: demo_uart.c
software/ae350_test/src/demo/wdt_pit/: demo_wdt_pit.c
software/ae350_test/src/demo/wfi/: demo_wfi.c
software/ae350_whetstone/: CMakeLists.txt  readme.md
software/ae350_whetstone/src/bsp/ae350/: loader.c
software/ae350_whetstone/src/bsp/driver/ae350/: dma_ae350.c  pit_ae350.h  rtc_ae350.c  rtc_ae350.h
software/ae350_whetstone/src/bsp/lib/: uart.c
software/ae350_whetstone/src/demo/: cpuidc.c  cpuidh.h  define.h  whets.c
software/ae350_whetstone/src/demo/stubs/: exit.c  sbrk.c
